--- a/index.html
+++ b/index.html
@@ -236,10 +236,14 @@
     <script>
         // Configuration - Replace these with your actual iCal feed URLs
         const TEAMS = [
-            { name: "Dad's Team", url: "https://example.com/ical/feed1.ics", icon: "D" },
-            { name: "Son 1's Team", url: "https://example.com/ical/feed2.ics", icon: "S1" },
-            { name: "Son 2's Team", url: "https://example.com/ical/feed3.ics", icon: "S2" },
-            { name: "Son 3's Team", url: "https://example.com/ical/feed4.ics", icon: "S3" }
+            { name: "M4", url: "webcal://web.teamo.chat/ical/iscahc/16150401/4th-XI-MenCalendar_matches.ics?noCache65", icon: "M4" },
+            { name: "M5P", url: "https://example.com/ical/feed2.ics", icon: "M5P" },
+            { name: "M5R", url: "https://example.com/ical/feed3.ics", icon: "M5R" },
+            { name: "M7", url: "https://example.com/ical/feed4.ics", icon: "M7" },
+            { name: "U14A", url: "https://example.com/ical/feed5.ics", icon: "U14A" },
+            { name: "U14B", url: "https://example.com/ical/feed6.ics", icon: "U14B" },
+            { name: "U16A", url: "https://example.com/ical/feed7.ics", icon: "U16A" },
+            { name: "U16B", url: "https://example.com/ical/feed8.ics", icon: "U16B" }
         ];
 
         // EmailJS Configuration (optional - sign up at emailjs.com)
