--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <script>
         // Configuration - Replace these with your actual iCal feed URLs
         const TEAMS = [
-            { name: "M4", url: "webcal://web.teamo.chat/ical/iscahc/16150401/4th-XI-MenCalendar_matches.ics?noCache65", icon: "M4" },
+            { name: "M4", url: "https://web.teamo.chat/ical/iscahc/16150401/4th-XI-MenCalendar_matches.ics?noCache65", icon: "M4" },
             { name: "M5P", url: "https://example.com/ical/feed2.ics", icon: "M5P" },
             { name: "M5R", url: "https://example.com/ical/feed3.ics", icon: "M5R" },
             { name: "M7", url: "https://example.com/ical/feed4.ics", icon: "M7" },
