--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockey Fixtures - Next Weekend</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -26,6 +27,8 @@
         
         <div id="message"></div>
         <div id="content"></div>
+
+        <footer class="version">v001</footer>        
     </div>
 
     <script src="js/config.js"></script>
