Fixed hockey stick icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏒 Hockey Fixtures</h1>
+            <h1>🏑 ISCA Hockey Fixtures</h1>
             <div class="weekend-navigation">
                 <button class="nav-button" id="prevBtn" onclick="navigateWeekend(-1)">← Previous</button>
                 <div class="weekend-date" id="weekendDate"></div>
